--- a/default.scss
+++ b/default.scss
@@ -12,6 +12,9 @@ $ggg:		#323232;
 //Overflower
 body
 {
+	padding: 0;
+	margin: 0;
+	
 	overflow-x: hidden;
 	background-color: $white;
 	font-family: 'Raleway', sans-serif;
